# Curs_Work_beta

./: pyproject.toml  user_settings.json
data/: operations.xls
src/: data_path.py  main.py  response_txt.json  utils.py  views.py
